Alignment fixing

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ li.dropdown {
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
 }
 #namein {
-	width: 134px;
+	width: 132px;
 	font-size: 10pt;
 	font-variant: small-caps;
 	box-shadow: 0px 0px 1px #535353;
